--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -8,7 +8,10 @@ jobs:
         steps:
         - name: welcome message
           run: echo "Hello World"
-
+        
+        - name: checkout
+          uses: actions/checkout@v4.2.2
+          
         - name: List files 
           run: ls
 
